hac: trigge rrelease

--- a/k8s/prod/common/family-public-law/fpl-case-service.yaml
+++ b/k8s/prod/common/family-public-law/fpl-case-service.yaml
@@ -25,6 +25,7 @@ spec:
       image: hmctspublic.azurecr.io/fpl/case-service:prod-65f15c67
       ingressHost: fpl-case-service-prod.service.core-compute-prod.internal
       environment:
+        DUMMY: "trigger release"
         FPL_LOCAL_AUTHORITY_CODES_FORBIDDEN_CASE_SUBMISSION: FPLA
         IDAM_API_URL: https://idam-api.platform.hmcts.net
         CCD_UI_BASE_URL: https://www.ccd.platform.hmcts.net
