temporary disable pod errors as its spamming

--- a/k8s/namespaces/monitoring/botkube/botkube.yaml
+++ b/k8s/namespaces/monitoring/botkube/botkube.yaml
@@ -30,8 +30,7 @@ spec:
             include:
               - all
             ignore: []               # List of namespaces to be ignored (omitempty), used only with include: all # example : include [all], ignore [x,y,z] 
-          events:                   # List of lifecycle events you want to receive, e.g create, update, delete, error OR all
-            - error
+          events: []               # List of lifecycle events you want to receive, e.g create, update, delete, error OR all
         - name: service
           namespaces:
             include:
