--- a/k8s/namespaces/jenkins/jenkins.yaml
+++ b/k8s/namespaces/jenkins/jenkins.yaml
@@ -497,7 +497,13 @@ spec:
                           appID: "60878"
                           description: "GitHub APP Key - rse"
                           id: "hmcts-jenkins-rse"
-                          privateKey: "${hmcts-jenkins-rse-ghapp}"                          
+                          privateKey: "${hmcts-jenkins-rse-ghapp}"
+                      - gitHubApp:
+                          appID: "62005"
+                          description: "GitHub APP Key - em"
+                          id: "hmcts-jenkins-em"
+                          privateKey: "${hmcts-jenkins-em-ghapp}"            
+            
           jobs: |
             jobs:
               - url: https://raw.githubusercontent.com/hmcts/cnp-jenkins-config/master/jobdsl/organisations-beta.groovy
