--- a/k8s/namespaces/jenkins/patches/cftptl/cluster-00/jenkins.yaml
+++ b/k8s/namespaces/jenkins/patches/cftptl/cluster-00/jenkins.yaml
@@ -218,6 +218,13 @@ spec:
                     name: RSE
                     recurse: true
                     title: RSE
+                - buildMonitor:
+                    includeRegex: >-
+                      ^HMCTS_.*(EM|DG).*\/(document-management-store-app)\/master
+                      ^HMCTS_.*EM.*\/.+\/master
+                    name: EM
+                    recurse: true
+                    title: Evidence Management
           authentication: |
             jenkins:
               securityRealm:
