--- a/k8s/namespaces/jenkins/patches/cftptl/cluster-00/jenkins.yaml
+++ b/k8s/namespaces/jenkins/patches/cftptl/cluster-00/jenkins.yaml
@@ -221,8 +221,7 @@ spec:
                 - buildMonitor:
                     includeRegex: >-
                       ^HMCTS_.*(EM|DG).*\/(document-management-store-app)\/master
-                      ^HMCTS_.*EM.*\/.+\/master
-                    name: EM
+                    name: Evidence
                     recurse: true
                     title: Evidence Management
           authentication: |
