Add evidence mgmt jenkins org (#3064)
* Add evidence mgmt org to jenkins

* fix typo

--- a/k8s/namespaces/jenkins/patches/cftptl/cluster-00/jenkins.yaml
+++ b/k8s/namespaces/jenkins/patches/cftptl/cluster-00/jenkins.yaml
@@ -218,6 +218,12 @@ spec:
                     name: RSE
                     recurse: true
                     title: RSE
+                - buildMonitor:
+                    includeRegex: >-
+                      ^HMCTS_.*(EM|DG).*\/(document-management-store-app)\/master
+                    name: Evidence
+                    recurse: true
+                    title: Evidence Management
           authentication: |
             jenkins:
               securityRealm:
