--- a/k8s/sandbox/common/idam-sprod/idam-web-public.yaml
+++ b/k8s/sandbox/common/idam-sprod/idam-web-public.yaml
@@ -19,6 +19,7 @@ spec:
   values:
     java:
       image: hmctspublic.azurecr.io/idam/web-public:preview
+      imagePullPolicy: Always
       ingressHost: idam-web-public-sprod.sandbox.platform.hmcts.net
       aadIdentityName: idam-sprod
       replicas: 3
