--- a/k8s/sandbox/common/idam-sprod/idam-api.yaml
+++ b/k8s/sandbox/common/idam-sprod/idam-api.yaml
@@ -19,6 +19,7 @@ spec:
   values:
     java:
       image: hmctspublic.azurecr.io/idam/api:preview
+      imagePullPolicy: Always
       ingressHost: idam-api-sprod.sandbox.platform.hmcts.net
       replicas: 3
       aadIdentityName: idam-sprod
