xui tidy up feature flag

--- a/k8s/prod/common/xui/webapp.yaml
+++ b/k8s/prod/common/xui/webapp.yaml
@@ -27,6 +27,7 @@ spec:
         SERVICES_CCD_COMPONENT_API: https://gateway.ccd.platform.hmcts.net
         SERVICES_IDAM_API_URL: https://idam-api.platform.hmcts.net
         SERVICES_IDAM_LOGIN_URL: https://hmcts-access.service.gov.uk
+        FEATURE_TERMS_AND_CONDITIONS_ENABLED: false
     global:
       environment: prod
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
