--- a/k8s/perftest/common/xui/webapp.yaml
+++ b/k8s/perftest/common/xui/webapp.yaml
@@ -23,6 +23,7 @@ spec:
       ingressHost: manage-case.perftest.platform.hmcts.net
       environment:
         FEATURE_TERMS_AND_CONDITIONS_ENABLED: true
+        DUMMY_VAR: false
     global:
       environment: perftest
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
