--- a/k8s/prod/common/xui/manage-organisations.yaml
+++ b/k8s/prod/common/xui/manage-organisations.yaml
@@ -27,6 +27,7 @@ spec:
         IDAM_WEB_SERVICE: https://hmcts-access.service.gov.uk
         MANAGE_CASE_LINK: https://manage-case.platform.hmcts.net/cases
         MANAGE_ORG_LINK: https://manage-org.platform.hmcts.net
+        FEATURE_TERMS_AND_CONDITIONS_ENABLED: false
     global:
       environment: prod
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
