--- a/k8s/demo/common/probate/probate-back-office.yaml
+++ b/k8s/demo/common/probate/probate-back-office.yaml
@@ -21,6 +21,8 @@ spec:
       replicas: 2
       useInterpodAntiAffinity: true
       image: "hmctspublic.azurecr.io/probate/back-office:pr-1051-9033cc25"
+      environment:
+        CCD_GATEWAY_HOST: https://gateway-ccd.demo.platform.hmcts.net
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
