fix typo in fpl aat

--- a/k8s/aat/common/family-public-law/fpl-case-service.yaml
+++ b/k8s/aat/common/family-public-law/fpl-case-service.yaml
@@ -26,7 +26,7 @@ spec:
       image: hmctspublic.azurecr.io/fpl/case-service:prod-3977574b
       ingressHost: fpl-case-service-aat.service.core-compute-aat.internal
       environment:
-        MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE=health, info, threaddump
+        MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE: health, info, threaddump
         GATEWAY_URL: https://gateway-ccd.aat.platform.hmcts.net
         FEATURE_TOGGLE_ROBOTICS_CASE_NUMBER_NOTIFICATION_ENABLED: true
         FEATURE_TOGGLE_ROBOTICS_SUPPORT_API_ENABLED: true
