--- a/k8s/demo/common/idam/idam.yaml
+++ b/k8s/demo/common/idam/idam.yaml
@@ -6,9 +6,9 @@ metadata:
   namespace: idam
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.idam-api: glob:demo-*
-    flux.weave.works/tag.idam-web-public: glob:demo-*
-    flux.weave.works/tag.idam-web-admin: glob:demo-*
+    flux.weave.works/tag.idam-api: glob:aat-*
+    flux.weave.works/tag.idam-web-public: glob:aat-*
+    flux.weave.works/tag.idam-web-admin: glob:aat-*
 spec:
   releaseName: idam
   timeout: 900
@@ -27,10 +27,10 @@ spec:
       environment: demo
     idam-api:
       java:
-        image: hmctspublic.azurecr.io/idam/api:demo
+        image: hmctspublic.azurecr.io/idam/api:latest
     idam-web-public:
       java:
-        image: hmctspublic.azurecr.io/idam/web-public:demo
+        image: hmctspublic.azurecr.io/idam/web-public:latest
     idam-web-admin:
       java:
-        image: hmctspublic.azurecr.io/idam/web-admin:demo
+        image: hmctspublic.azurecr.io/idam/web-admin:latest
