--- a/k8s/demo/common/idam/idam.yaml
+++ b/k8s/demo/common/idam/idam.yaml
@@ -5,10 +5,10 @@ metadata:
   name: idam
   namespace: idam
   annotations:
-    flux.weave.works/automated: "true"
-    flux.weave.works/tag.idam-api: glob:aat-*
-    flux.weave.works/tag.idam-web-public: glob:aat-*
-    flux.weave.works/tag.idam-web-admin: glob:aat-*
+    fluxcd.io/automated: "true"
+    fluxcd.io/tag.idam-api: glob:aat-*
+    fluxcd.io/tag.idam-web-public: glob:aat-*
+    fluxcd.io/tag.idam-web-admin: glob:aat-*
 spec:
   releaseName: idam
   timeout: 900
