--- a/k8s/demo/common/idam/idam.yaml
+++ b/k8s/demo/common/idam/idam.yaml
@@ -6,9 +6,9 @@ metadata:
   namespace: idam
   annotations:
     fluxcd.io/automated: "true"
-    fluxcd.io/tag.idam-api: glob:aat-*
-    fluxcd.io/tag.idam-web-public: glob:aat-*
-    fluxcd.io/tag.idam-web-admin: glob:aat-*
+    fluxcd.io/tag.idam-api: glob:preview-*
+    fluxcd.io/tag.idam-web-public: glob:preview-*
+    fluxcd.io/tag.idam-web-admin: glob:preview-*
 spec:
   releaseName: idam
   timeout: 900
@@ -27,10 +27,10 @@ spec:
       environment: demo
     idam-api:
       java:
-        image: hmctspublic.azurecr.io/idam/api:latest
+        image: hmctspublic.azurecr.io/idam/api:preview
     idam-web-public:
       java:
-        image: hmctspublic.azurecr.io/idam/web-public:latest
+        image: hmctspublic.azurecr.io/idam/web-public:preview
     idam-web-admin:
       java:
-        image: hmctspublic.azurecr.io/idam/web-admin:latest
+        image: hmctspublic.azurecr.io/idam/web-admin:preview
