--- a/k8s/demo/common/dg/dg-docassembly.yaml
+++ b/k8s/demo/common/dg/dg-docassembly.yaml
@@ -22,6 +22,8 @@ spec:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/dg/docassembly:prod-f3eed5c6
       ingressHost: dg-docassembly-demo.service.core-compute-demo.internal
+      environment:
+        VAR_TA: trigger1
     global:
       environment: demo
       subscriptionId: "d025fece-ce99-4df2-b7a9-b649d3ff2060"
