--- a/k8s/prod/common/probate/probate-back-office.yaml
+++ b/k8s/prod/common/probate/probate-back-office.yaml
@@ -5,7 +5,7 @@ metadata:
   name: probate-back-office
   namespace: probate
   annotations:
-    fluxcd.io/automated: "true"
+    fluxcd.io/automated: "false"
     fluxcd.io/tag.java: glob:prod-*
 spec:
   releaseName: probate-back-office
