refactor: added jrd demo yaml values

--- a/k8s/demo/common/rd/rd-demo.yaml
+++ b/k8s/demo/common/rd/rd-demo.yaml
@@ -50,6 +50,18 @@ spec:
         environment:
           AUTH_IDAM_CLIENT_BASEURL: "{{ .Values.global.idamApiUrl }}"
 
+    rd-judicial-data-load:
+      java:
+        image: hmctspublic.azurecr.io/rd/judicial-data-load:demo
+        ingressHost: rd-judicial-data-load.demo.platform.hmcts.net
+        ingressClass: traefik-no-proxy
+
+    rd-judicial-api:
+      java:
+        image: hmctspublic.azurecr.io/rd/judicial-api:demo
+        ingressHost: rd-judicial-api.demo.platform.hmcts.net
+        ingressClass: traefik-no-proxy
+
     rpe-service-auth-provider:
       java:
         ingressHost: rd-s2s-api.demo.platform.hmcts.net
