refactor: Added JRD demo kube schedulers (#3407)
* refactor:added rd perf test configuration set up

* refactor: Added JRD demo kube schedulers

* refactor: Added JRD demo kube schedulers

* refactor: Added JRD demo kube schedulers

--- a/k8s/demo/cluster-00/rd/judicial-data-load.yaml
+++ b/k8s/demo/cluster-00/rd/judicial-data-load.yaml
@@ -21,6 +21,7 @@ spec:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/rd/judicial-data-load:demo
     global:
-      environment: aat
+      environment: demo
+
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
       enableKeyVaults: true
