--- a/k8s/namespaces/admin/env-injector/patches/sandbox/cluster-01/env-injector.yaml
+++ b/k8s/namespaces/admin/env-injector/patches/sandbox/cluster-01/env-injector.yaml
@@ -13,3 +13,8 @@ spec:
     image: hmctspublic.azurecr.io/k8s-env-injector:db40q8
     environment:
       CLUSTER_NAME: sbox-aks-01
+    dnsOptions:
+      ndots: 3
+      single-request-reopen:
+      use-vc:
+
