--- a/k8s/aat/cluster-00-overlay/kustomization.yaml
+++ b/k8s/aat/cluster-00-overlay/kustomization.yaml
@@ -7,7 +7,7 @@ bases:
   - ../../namespaces/admin/keyvault-flexvol
   - ../../namespaces/admin/traefik
   - ../../namespaces/kured
-  #- ../../namespaces/neuvector
+  - ../../namespaces/neuvector
   - ../../namespaces/monitoring
   - ../../namespaces/admin/env-injector
   - ../../namespaces/monitoring/botkube
@@ -31,8 +31,8 @@ patchesStrategicMerge:
   - ../../namespaces/kured/patches/aat/cluster-00/kured.yaml
 
   #neuvector patch
-  #- ../../namespaces/neuvector/patches/aat/neuvector.yaml
-  #- ../../namespaces/neuvector/patches/aat/cluster-00/neuvector.yaml
+  - ../../namespaces/neuvector/patches/aat/neuvector.yaml
+  - ../../namespaces/neuvector/patches/aat/cluster-00/neuvector.yaml
 
   #prom-operator patch
   - ../../namespaces/monitoring/patches/aat/cluster-00/prom-operator.yaml
