refactor: updated JRD yaml

--- a/k8s/demo/common/rd/judicial-api.yaml
+++ b/k8s/demo/common/rd/judicial-api.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: rd
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:demo-*
+    flux.weave.works/tag.java: glob:prod-*
 spec:
   releaseName: rd-judicial-api
   rollback:
