--- a/k8s/demo/common/em/em-ccd-orchestrator.yaml
+++ b/k8s/demo/common/em/em-ccd-orchestrator.yaml
@@ -21,7 +21,7 @@ spec:
       replicas: 2
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/em/ccdorc:prod-1abbbace
-      ingressHost: em-ccd-orchestrator-demo.service.core-compute-demo.internal
+      ingressHost: em-ccdorc-demo.service.core-compute-demo.internal
       environment:
         VAR_TA: trigger5
     global:
