refactor: updated JRD yaml

--- a/k8s/demo/cluster-00/rd/judicial-data-load.yaml
+++ b/k8s/demo/cluster-00/rd/judicial-data-load.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: rd
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.job: glob:demo-*
+    flux.weave.works/tag.job: glob:prod-*
 spec:
   releaseName: rd-judicial-data-load
   rollback:
