--- a/k8s/demo/common/ccpay/ccpay-bubble-frontend.yaml
+++ b/k8s/demo/common/ccpay/ccpay-bubble-frontend.yaml
@@ -15,14 +15,14 @@ spec:
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
     name: ccpay-bubble-frontend
-    version: 0.2.1
+    version: 0.2.2
   values:
     nodejs:
       replicas: 2
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/ccpay/bubble-frontend:demo
       environment:
-        DUMMY_RESTART_VAR: false
+        DUMMY_RESTART_VAR: true
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
