--- a/k8s/demo/common/ethos/ecm-consumer.yaml
+++ b/k8s/demo/common/ethos/ecm-consumer.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: ethos
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:demo
+    flux.weave.works/tag.java: glob:aat-*
 spec:
   releaseName: ecm-consumer
   forceUpgrade: true
@@ -21,7 +21,7 @@ spec:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/ethos/ecm-consumer:demo
+      image: hmctspublic.azurecr.io/ethos/ecm-consumer:aat-ad5716c7
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
