--- a/k8s/namespaces/jenkins/jenkins.yaml
+++ b/k8s/namespaces/jenkins/jenkins.yaml
@@ -44,6 +44,7 @@ spec:
         -XX:+UseParallelOldGC
         -Djenkins.azure-keyvault.uami.enabled=true
         -Djenkins.ui.refresh=true
+        -Djenkins.model.Jenkins.logStartupPerformance=true
         -Dorg.apache.commons.jelly.tags.fmt.timeZone=Europe/London
         -Dhudson.model.DirectoryBrowserSupport.CSP="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self'"
 
