--- a/k8s/demo/common/ccpay/ccpay-bubble-frontend.yaml
+++ b/k8s/demo/common/ccpay/ccpay-bubble-frontend.yaml
@@ -22,7 +22,7 @@ spec:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/ccpay/bubble-frontend:demo
       environment:
-        DUMMY_RESTART_VAR: true
+        DUMMY_RESTART_VAR: false
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
