--- a/k8s/demo/common/rd/user-profile-api.yaml
+++ b/k8s/demo/common/rd/user-profile-api.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: rd
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:prod-*
+    flux.weave.works/tag.java: glob:demo-*
 spec:
   releaseName: rd-user-profile-api
   rollback:
@@ -20,8 +20,8 @@ spec:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/rd/user-profile-api:prod-1ab9f399
+      image: hmctspublic.azurecr.io/rd/user-profile-api:demo
     global:
-      environment: aat
+      environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
       enableKeyVaults: true
