--- a/k8s/demo/common/ccd/ccd-full.yaml
+++ b/k8s/demo/common/ccd/ccd-full.yaml
@@ -61,6 +61,7 @@ spec:
       ccdCaseManagementWebIngress: www-{{ .Release.Name }}.demo.platform.hmcts.net
       devMode: true
       environment: demo
+      dummy: true
 
     ccd-admin-web:
       nodejs:
