test: judicial data load kube job testing

--- a/k8s/demo/cluster-00/rd/judicial-data-load.yaml
+++ b/k8s/demo/cluster-00/rd/judicial-data-load.yaml
@@ -12,9 +12,9 @@ spec:
   rollback:
     enable: true
   chart:
-    name: rd-judicial-data-load
-    repository: https://hmctspublic.azurecr.io/helm/v1/repo/
-    version: 0.1.4
+    git: https://github.com/hmcts/rd-judicial-data-load
+    ref: demo
+    path: chart/rd-judicial-data-load
   values:
     job:
       schedule: "0/10 * * * *"
