Updated sscs-cor-backend demo to PR-617

--- a/k8s/demo/common/sscs/sscs-cor-backend.yaml
+++ b/k8s/demo/common/sscs/sscs-cor-backend.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: sscs
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:prod-*
+    flux.weave.works/tag.java: glob:pr-617-*
 spec:
   releaseName: sscs-cor-backend
   rollback:
