Change test URL for bulk-can-processor tests in aat

--- a/k8s/aat/common/bsp/bulk-scan-processor.yaml
+++ b/k8s/aat/common/bsp/bulk-scan-processor.yaml
@@ -48,7 +48,7 @@ spec:
               processed-envelopes-queue-send-connection-string: PROCESSED_ENVELOPES_QUEUE_WRITE_CONN_STRING
               test-s2s-secret: TEST_S2S_SECRET
         environment:
-          TEST_URL: "http://bulk-scan-processor-java"
+          TEST_URL: "http://bulk-scan-processor-aat.service.core-compute-aat.internal"
           SLACK_CHANNEL: "bsp-build-notices"
           SLACK_NOTIFY_SUCCESS: true
           TEST_S2S_NAME: "bulk_scan_processor_tests"
