--- a/k8s/aat/common/ccpay/ccpay-callback-function.yaml
+++ b/k8s/aat/common/ccpay/ccpay-callback-function.yaml
@@ -29,3 +29,6 @@ spec:
         AzureWebJobsStorage:
           secretRef: ccpay-callback-function
           key: AzureWebJobsStorage
+        APPINSIGHTS_INSTRUMENTATIONKEY:
+          secretRef: ccpay-callback-function
+          key: APPINSIGHTS_INSTRUMENTATIONKEY
