--- a/k8s/prod/common/money-claims/claim-store.yaml
+++ b/k8s/prod/common/money-claims/claim-store.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cmc-claim-store
   namespace: money-claims
   annotations:
-    flux.weave.works/automated: "true"
+    flux.weave.works/automated: "false"
     flux.weave.works/tag.java: glob:prod-*
 spec:
   releaseName: cmc-claim-store
@@ -20,7 +20,7 @@ spec:
     java:
       replicas: 3
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/cmc/claim-store:prod-1ecef52e
+      image: hmctspublic.azurecr.io/cmc/claim-store:prod-b98e6d38
       environment:
         IDAM_API_URL: https://idam-api.platform.hmcts.net
         CLAIM_STORE_TEST_SUPPORT_ENABLED: false
