--- a/k8s/aat/common/ia/case-notifications-api.yaml
+++ b/k8s/aat/common/ia/case-notifications-api.yaml
@@ -24,7 +24,7 @@ spec:
       image: hmctspublic.azurecr.io/ia/case-notifications-api:prod-acf6abe3
       ingressHost: ia-case-notifications-api-aat.service.core-compute-aat.internal
       environment:
-        RESTART_ME: "Update due to vault change"
+        RESTART_ME: "Update due to images missmatch"
     global:
       environment: aat
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
