--- a/k8s/demo/common/sscs/sscs-cor-backend.yaml
+++ b/k8s/demo/common/sscs/sscs-cor-backend.yaml
@@ -21,6 +21,9 @@ spec:
       replicas: 2
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/sscs-cor/backend:pr-617-6a0679d9
+      environment:
+        IDAM_URL: https://idam-api.demo.platform.hmcts.net
+        IDAM_API_JWK_URL: https://idam-api.demo.platform.hmcts.net/jwks
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
