--- a/k8s/demo/cluster-00/rd/judicial-data-load.yaml
+++ b/k8s/demo/cluster-00/rd/judicial-data-load.yaml
@@ -17,7 +17,7 @@ spec:
     path: charts/rd-judicial-data-load
   values:
     job:
-      schedule: "0/10 * * * *"
+      schedule: "0 11 * * *"
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/rd/judicial-data-load:prod-6a797de7
     global:
