--- a/k8s/aat/common/ia/case-api.yaml
+++ b/k8s/aat/common/ia/case-api.yaml
@@ -23,7 +23,7 @@ spec:
       image: hmctspublic.azurecr.io/ia/case-api:prod-436c81aa
       ingressHost: ia-case-api-aat.service.core-compute-aat.internal
       environment:
-        RESTART_ME: "Update due to vault Change"
+        RESTART_ME: "Update due to image missmatch"
         CCD_URL: "http://ccd-data-store-api-aat.service.core-compute-aat.internal"
     global:
       environment: aat
