--- a/k8s/demo/common/ia/case-documents-api.yaml
+++ b/k8s/demo/common/ia/case-documents-api.yaml
@@ -24,6 +24,7 @@ spec:
       ingressHost: ia-case-documents-api-demo.service.core-compute-demo.internal
       environment:
         DOCMOSIS_ENDPOINT: https://docmosis-testing.platform.hmcts.net
+        EM_BUNDLER_URL: http://em-ccdorc-demo.service.core-compute-demo.internal
         RESTART_ME: "2"
     global:
       environment: demo
