--- a/k8s/demo/common/rd/user-profile-api.yaml
+++ b/k8s/demo/common/rd/user-profile-api.yaml
@@ -21,6 +21,8 @@ spec:
       replicas: 2
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/rd/user-profile-api:demo
+      environment:
+        IDAM_URL: https://idam-api.demo.platform.hmcts.net
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
