--- a/k8s/demo/common/rd/user-profile-api.yaml
+++ b/k8s/demo/common/rd/user-profile-api.yaml
@@ -15,12 +15,14 @@ spec:
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
     name: rd-user-profile-api
-    version: 0.0.8
+    version: 0.0.9
   values:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/rd/user-profile-api:demo
+      environment:
+        IDAM_URL: https://idam-api.demo.platform.hmcts.net
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
