--- a/k8s/demo/common/ccpay/fees-register-frontend.yaml
+++ b/k8s/demo/common/ccpay/fees-register-frontend.yaml
@@ -23,6 +23,7 @@ spec:
       image: hmctspublic.azurecr.io/fees-register/frontend:demo
       environment:
         IDAM_LOGIN_WEB_URL: https://idam-web-public.{{ .Values.global.environment }}.platform.hmcts.net/o/authorize
+        DUMMY_RESTART_VAR: true
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
