add new dummy var

--- a/k8s/perftest/common/xui/manage-organisations.yaml
+++ b/k8s/perftest/common/xui/manage-organisations.yaml
@@ -22,6 +22,8 @@ spec:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/xui/mo-webapp:prod-f1b3470c
       ingressHost: manage-org.perftest.platform.hmcts.net
+      environment:
+        TEST_VAR: true
     global:
       environment: perftest
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
