--- a/k8s/perftest/common/pcq/pcq-frontend.yaml
+++ b/k8s/perftest/common/pcq/pcq-frontend.yaml
@@ -18,6 +18,10 @@ spec:
     version: 1.0.30
   values:
     nodejs:
+      memoryRequests: "1024Mi"
+      cpuRequests: "500m"
+      memoryLimits: "2048Mi"
+      cpuLimits: "1500m"
       replicas: 2
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/pcq/frontend:prod-509f87c4
