Added container sizes for the pcq backend in perftest

--- a/k8s/perftest/common/pcq/pcq-backend.yaml
+++ b/k8s/perftest/common/pcq/pcq-backend.yaml
@@ -18,6 +18,10 @@ spec:
     version: 0.0.19
   values:
     java:
+      memoryRequests: "1024Mi"
+      cpuRequests: "500m"
+      memoryLimits: "2048Mi"
+      cpuLimits: "1500m"
       replicas: 2
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/pcq/backend:prod-846f83af
