--- a/k8s/aat/common/reform-scan/notification-service.yaml
+++ b/k8s/aat/common/reform-scan/notification-service.yaml
@@ -21,6 +21,8 @@ spec:
       replicas: 2
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/reform-scan/notification-service:prod-ba9e2a54
+      environment:
+        FORCE_RESTART: "true"
     global:
       environment: aat
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
