--- a/k8s/demo/common/ccd/ccd-full.yaml
+++ b/k8s/demo/common/ccd/ccd-full.yaml
@@ -92,6 +92,7 @@ spec:
         ingressHost: ccd-case-activity-api-{{ .Release.Name }}.demo.platform.hmcts.net
         environment:
           REDIS_HOST: "{{ .Release.Name }}-redis-master"
+          REDIS_PORT: 6379
           REDIS_PASSWORD: fake-password
           REDIS_SSL_ENABLED: false
         keyVaults:
