try experimental flux

--- a/k8s/namespaces/admin/flux/patches/aat/flux.yaml
+++ b/k8s/namespaces/admin/flux/patches/aat/flux.yaml
@@ -6,6 +6,8 @@ metadata:
   namespace: admin
 spec:
   values:
+    image:
+      tag: master-487df64d
     git:
       email: "flux-aat@hmcts.net"
       user: "Flux AAT"
