--- a/k8s/namespaces/admin/flux/patches/aat/flux.yaml
+++ b/k8s/namespaces/admin/flux/patches/aat/flux.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   values:
     image:
+      repository: docker.io/fluxcd/flux-prerelease
       tag: master-487df64d
     git:
       email: "flux-aat@hmcts.net"
