--- a/k8s/demo/common/ccpay/ccpay-bubble-frontend.yaml
+++ b/k8s/demo/common/ccpay/ccpay-bubble-frontend.yaml
@@ -21,6 +21,7 @@ spec:
       replicas: 2
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/ccpay/bubble-frontend:demo
+      imagePullPolicy: Always
       environment:
         DUMMY_RESTART_VAR: false
     global:
