--- a/k8s/demo/common/xui/approve-org.yaml
+++ b/k8s/demo/common/xui/approve-org.yaml
@@ -22,6 +22,8 @@ spec:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/xui/ao-webapp:prod-c2b9a343
       ingressHost: administer-orgs.demo.platform.hmcts.net
+      environment:
+        TEST_VAR: true
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
