--- a/k8s/demo/common/ccpay/fees-register-frontend.yaml
+++ b/k8s/demo/common/ccpay/fees-register-frontend.yaml
@@ -21,6 +21,7 @@ spec:
       replicas: 2
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/fees-register/frontend:demo
+      imagePullPolicy: Always
       environment:
         IDAM_LOGIN_WEB_URL: https://idam-web-public.{{ .Values.global.environment }}.platform.hmcts.net/o/authorize
         DUMMY_RESTART_VAR: true
