--- a/k8s/aat/common/rd/professional-api.yaml
+++ b/k8s/aat/common/rd/professional-api.yaml
@@ -22,7 +22,7 @@ spec:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/rd/professional-api:prod-545ef235
       environment:
-        IDAM_URL: https://idam-api.demo.platform.hmcts.net
+        IDAM_URL: https://idam-api.aat.platform.hmcts.net
         CCD_URL: http://ccd-user-profile-api-aat.service.core-compute-aat.internal
     global:
       environment: aat
