--- a/k8s/prod/common/reform-scan/notification-service.yaml
+++ b/k8s/prod/common/reform-scan/notification-service.yaml
@@ -23,6 +23,7 @@ spec:
       image: hmctspublic.azurecr.io/reform-scan/notification-service:prod-ba9e2a54
       environment:
         PENDING_NOTIFICATIONS_TASK_DELAY_IN_MS: "1800000"
+        FORCE_RESTART: "true"
     global:
       environment: prod
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
