--- a/k8s/namespaces/admin/flux/flux.yaml
+++ b/k8s/namespaces/admin/flux/flux.yaml
@@ -17,7 +17,8 @@ spec:
     version: 1.3.0
   values:
     image:
-      tag: 1.19.0
+      repository: docker.io/fluxcd/flux-prerelease
+      tag: master-487df64d
     git:
       url: git@github.com:hmcts/cnp-flux-config
       pollInterval: 1m
