Trigger deployment of blob-router in demo

--- a/k8s/demo/cluster-00/reform-scan/blob-router.yaml
+++ b/k8s/demo/cluster-00/reform-scan/blob-router.yaml
@@ -26,6 +26,7 @@ spec:
         CRIME_ENABLED: "true"
         INCLUDE_WRITE_PERMISSION_IN_STORAGE_SAS_TOKEN: false
         FORCE_RESTART: "true"
+        REMOVE_ME: "dummy var to trigger deployment - remove it"
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
