test: judicial data load kube job testing

--- a/k8s/demo/cluster-00/rd/judicial-data-load.yaml
+++ b/k8s/demo/cluster-00/rd/judicial-data-load.yaml
@@ -17,9 +17,9 @@ spec:
     path: charts/rd-judicial-data-load
   values:
     job:
-      schedule: "0 11 * * *"
+      schedule: "40 17 * * *"
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/rd/judicial-data-load:prod-6a797de7
+      image: hmctspublic.azurecr.io/rd/judicial-data-load:demo
     global:
       environment: demo
 
