--- a/k8s/demo/cluster-01/rd/judicial-data-load.yaml
+++ b/k8s/demo/cluster-01/rd/judicial-data-load.yaml
@@ -19,7 +19,7 @@ spec:
     job:
       schedule: "0 18 * * *"
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/rd/judicial-data-load:prod-6a797de7
+      image: hmctspublic.azurecr.io/rd/judicial-data-load:demo
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
