--- a/k8s/demo/cluster-00/rd/judicial-data-load.yaml
+++ b/k8s/demo/cluster-00/rd/judicial-data-load.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: rd
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.job: glob:prod-*
+    flux.weave.works/tag.job: glob:demo-*
 spec:
   releaseName: rd-judicial-data-load
   rollback:
@@ -17,9 +17,9 @@ spec:
     path: charts/rd-judicial-data-load
   values:
     job:
-      schedule: "40 17 * * *"
+      schedule: "0 18 * * *"
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/rd/judicial-data-load:prod-6a797de7
+      image: hmctspublic.azurecr.io/rd/judicial-data-load:demo
     global:
       environment: demo
 
