test: JRD kubernetes scheduler job testing (#3508)
* refactor:added rd perf test configuration set up

* test: judicial data load kube job testing

* test: judicial data load kube job testing

* test: judicial data load kube job testing

--- a/k8s/demo/cluster-01/rd/judicial-data-load.yaml
+++ b/k8s/demo/cluster-01/rd/judicial-data-load.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: rd
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.job: glob:prod-*
+    flux.weave.works/tag.job: glob:pr-117-*
 spec:
   releaseName: rd-judicial-data-load
   rollback:
@@ -17,9 +17,9 @@ spec:
     path: charts/rd-judicial-data-load
   values:
     job:
-      schedule: "0 18 * * *"
+      schedule: "50 21 * * *"
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/rd/judicial-data-load:prod-6a797de7
+      image: hmctspublic.azurecr.io/rd/judicial-data-load:pr-117-cd5453dc
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
