Change Slack channel for bulk-scan-processor aat test nofitications

--- a/k8s/aat/common/bsp/bulk-scan-processor.yaml
+++ b/k8s/aat/common/bsp/bulk-scan-processor.yaml
@@ -49,7 +49,7 @@ spec:
               test-s2s-secret: TEST_S2S_SECRET
         environment:
           TEST_URL: "http://bulk-scan-processor-aat.service.core-compute-aat.internal"
-          SLACK_CHANNEL: "bsp-build-notices"
+          SLACK_CHANNEL: "bsp-test-notices"
           SLACK_NOTIFY_SUCCESS: true
           TEST_S2S_NAME: "bulk_scan_processor_tests"
           TEST_S2S_URL: "http://rpe-service-auth-provider-aat.service.core-compute-aat.internal"
