Change scheduled functional test schedule for bulk-scan-processor in aat

--- a/k8s/aat/common/bsp/bulk-scan-processor.yaml
+++ b/k8s/aat/common/bsp/bulk-scan-processor.yaml
@@ -65,7 +65,7 @@ spec:
       functionaltestscron:
         enabled: true
         image: hmctspublic.azurecr.io/bulk-scan/processor-test:prod-aaf13ccb
-        schedule: "15/30 * * * *"
+        schedule: "15/30 6-19 * * mon-fri"
       smoketests:
         enabled: true
         image: hmctspublic.azurecr.io/bulk-scan/processor-test:prod-aaf13ccb
