--- a/k8s/demo/common/ccd/ccd-full.yaml
+++ b/k8s/demo/common/ccd/ccd-full.yaml
@@ -1,5 +1,4 @@
 ---
-# yamllint disable-file
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
@@ -118,7 +117,7 @@ spec:
     ccd-user-profile-api:
       java:
         image: hmctspublic.azurecr.io/ccd/user-profile-api:prod-a7b8709b
-
+  # yamllint disable rule:indentation
     ccd-user-profile-importer:
       users:
       - auto.test.cnp@gmail.com|AUTOTEST1|AAT|TODO
@@ -130,3 +129,4 @@ spec:
       - https://github.com/hmcts/befta-fw/raw/master/src/main/resources/uk/gov/hmcts/befta/dse/ccd/definitions/excel/CCD_CNP_27.xlsx
       userRoles:
       - caseworker-autotest1
+# yamllint enable rule:indentation
