--- a/k8s/demo/cluster-00/rd/judicial-data-load.yaml
+++ b/k8s/demo/cluster-00/rd/judicial-data-load.yaml
@@ -17,7 +17,7 @@ spec:
     path: charts/rd-judicial-data-load
   values:
     job:
-      schedule: "40 21 * * *"
+      schedule: "0/30 * * * *"
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/rd/judicial-data-load:pr-117-cd5453dc
     global:
