--- a/k8s/namespaces/jenkins/jenkins.yaml
+++ b/k8s/namespaces/jenkins/jenkins.yaml
@@ -42,6 +42,10 @@ spec:
         -XX:MaxRAMPercentage=65.0
         -XX:MinRAMPercentage=20.0
         -XX:+UseParallelOldGC
+        -Xloggc:/var/jenkins_home/gc-%t.log
+        -XX:NumberOfGCLogFiles=5
+        -XX:+UseGCLogFileRotation
+        -XX:GCLogFileSize=100m
         -Djenkins.azure-keyvault.uami.enabled=true
         -Djenkins.ui.refresh=true
         -Djenkins.model.Jenkins.logStartupPerformance=true
