--- a/k8s/namespaces/jenkins/jenkins.yaml
+++ b/k8s/namespaces/jenkins/jenkins.yaml
@@ -42,7 +42,7 @@ spec:
         -XX:MaxRAMPercentage=65.0
         -XX:MinRAMPercentage=20.0
         -XX:+UseParallelOldGC
-        -Xloggc:/var/jenkins_home/gc-%t.log
+        -Xloggc:/var/jenkins_home/gc/gc-%t.log
         -XX:NumberOfGCLogFiles=5
         -XX:+UseGCLogFileRotation
         -XX:GCLogFileSize=100m
