--- a/k8s/aat/common/ethos/ecm-consumer.yaml
+++ b/k8s/aat/common/ethos/ecm-consumer.yaml
@@ -14,13 +14,13 @@ spec:
     retry: true
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
-    name: ecm-consumer
+    name: ethos-ecm-consumer
     version: 0.0.1
   values:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/ethos/ecm-consumer:aat-eb96e9bc
+      image: hmctspublic.azurecr.io/ethos/ecm-consumer:aat-907a730a
     global:
       environment: aat
       subscriptionId: "1c4f0704-a29e-403d-b719-b90c34ef14c9"
