--- a/k8s/demo/common/ethos/ecm-consumer.yaml
+++ b/k8s/demo/common/ethos/ecm-consumer.yaml
@@ -15,8 +15,8 @@ spec:
     retry: true
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
-    name: ecm-consumer
-    version: 0.0.3
+    name: ethos-ecm-consumer
+    version: 0.0.1
   values:
     java:
       replicas: 2
