--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -57,6 +57,7 @@ k8s/**/common/ccd/admin-web.yaml @hmcts/cdm
 k8s/aat/common/ccd/test-stubs-service.yaml @hmcts/cdm
 k8s/**/common/ccd/case-activity-api.yaml @hmcts/cdm
 k8s/**/common/ccd/case-management-web.yaml @hmcts/cdm
+k8s/aat/common/ccd/case-document-am-api.yaml @hmcts/cdm
 
 ##AAC - CDM
 k8s/aat/common/aac/namespace.yaml @hmcts/cdm
