tactical CCD_DM_DOMAIN fix

--- a/k8s/demo/common/ccd/ccd-full.yaml
+++ b/k8s/demo/common/ccd/ccd-full.yaml
@@ -113,6 +113,8 @@ spec:
     ccd-data-store-api:
       java:
         image: hmctspublic.azurecr.io/ccd/data-store-api:prod-73b64ead
+        environment:
+          CCD_DM_DOMAIN: https?://.*dm-store.*
 
     ccd-user-profile-api:
       java:
