--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,5 +17,7 @@ jobs:
         run: ./tests/run.sh
       - name: Kustomize Tests
         run: ./tests/test-kustomize.sh
+      - name: Install pre-reqs
+        run: 'sudo apt-get install -y yamllint'
       - name: Lint Tests
         run: ./tests/lint-yaml.sh
