Disable comment indent rule

--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -4,5 +4,6 @@ rules:
   line-length: disable
   document-start: disable
   new-line-at-end-of-file: disable
+  comments-indentation: disable
   comments:
     require-starting-space: false
