--- a/k8s/aat/common/sscs/sscs-tya-notif.yaml
+++ b/k8s/aat/common/sscs/sscs-tya-notif.yaml
@@ -21,6 +21,10 @@ spec:
       replicas: 2
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/sscs/tya-notif:prod-bf8e0c17
+      environment:
+        JOB_SCHEDULER_DB_USERNAME: "notification@sscs-tya-notif-postgres-v11-db-aat"
+        JOB_SCHEDULER_DB_NAME: "notification"
+        JOB_SCHEDULER_DB_HOST: "sscs-tya-notif-postgres-v11-db-aat.postgres.database.azure.com"
     global:
       environment: aat
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
