--- a/k8s/perftest/common/ccd/case-activity-api.yaml
+++ b/k8s/perftest/common/ccd/case-activity-api.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: ccd
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.nodejs: glob:prod-*
+    flux.weave.works/tag.nodejs: glob:pr-196-*
 spec:
   releaseName: ccd-case-activity-api
   rollback:
@@ -15,12 +15,12 @@ spec:
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
     name: ccd-case-activity-api
-    version: 1.1.5
+    version: 1.1.7
   values:
     nodejs:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/ccd/case-activity-api:prod-beffa636
+      image: hmctspublic.azurecr.io/ccd/case-activity-api:pr-196-258911fd
     global:
       environment: perftest
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
