--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -5,5 +5,7 @@ rules:
   document-start: disable
   new-line-at-end-of-file: disable
   comments-indentation: disable
+  # sealed secrets adds these automatically, just turn it off so we aren't fighting it
+  empty-lines: disable
   comments:
     require-starting-space: false
