--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -6,6 +6,9 @@ rules:
   new-line-at-end-of-file: disable
   comments-indentation: disable
   # sealed secrets adds these automatically, just turn it off so we aren't fighting it
-  empty-lines: disable
+  empty-lines:
+    max-end: 1
   comments:
     require-starting-space: false
+  indentation:
+    indent-sequences: consistent
