Updated notify new DB v11 on AAT

--- a/k8s/aat/common/sscs/sscs-tya-notif.yaml
+++ b/k8s/aat/common/sscs/sscs-tya-notif.yaml
@@ -22,9 +22,10 @@ spec:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/sscs/tya-notif:prod-7a3bb20f
       environment:
-        JOB_SCHEDULER_DB_USERNAME: "notification@sscs-tya-notif-postgres-v11-db-aat"
-        JOB_SCHEDULER_DB_NAME: "notification"
-        JOB_SCHEDULER_DB_HOST: "sscs-tya-notif-postgres-v11-db-aat.postgres.database.azure.com"
+        JOB_SCHEDULER_DB_USERNAME: notification@sscs-tya-notif-postgres-v11-db-aat
+        JOB_SCHEDULER_DB_NAME: notification
+        JOB_SCHEDULER_DB_HOST: sscs-tya-notif-postgres-v11-db-aat.postgres.database.azure.com
+        TEST_PARAM: true
     global:
       environment: aat
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
