--- a/k8s/preview/idam/idam-web-public.yaml
+++ b/k8s/preview/idam/idam-web-public.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   releaseName: idam-web-public
   rollback:
-    enable: true
+    enable: false
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
     name: idam-web-public
