--- a/k8s/preview/idam/idam-web-public.yaml
+++ b/k8s/preview/idam/idam-web-public.yaml
@@ -5,8 +5,8 @@ metadata:
   name: idam-web-public
   namespace: idam
   annotations:
-    flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:preview-*
+    fluxcd.io/automated: "true"
+    filter.fluxcd.io/java: glob:preview-*
 spec:
   releaseName: idam-web-public
   rollback:
