--- a/k8s/preview/idam/idam-web-public.yaml
+++ b/k8s/preview/idam/idam-web-public.yaml
@@ -5,12 +5,12 @@ metadata:
   name: idam-web-public
   namespace: idam
   annotations:
-    flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:preview-*
+    fluxcd.io/automated: "true"
+    filter.fluxcd.io/java: glob:preview-*
 spec:
   releaseName: idam-web-public
   rollback:
-    enable: true
+    enable: false
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
     name: idam-web-public
