--- a/k8s/preview/idam/idam-api.yaml
+++ b/k8s/preview/idam/idam-api.yaml
@@ -5,8 +5,8 @@ metadata:
   name: idam-api
   namespace: idam
   annotations:
-    flux.weave.works/tag.java: glob:preview-*
     fluxcd.io/automated: "true"
+    filter.fluxcd.io/java: glob:preview-*
 spec:
   releaseName: idam-api
   rollback:
