--- a/k8s/preview/idam/idam-web-public.yaml
+++ b/k8s/preview/idam/idam-web-public.yaml
@@ -10,11 +10,11 @@ metadata:
 spec:
   releaseName: idam-web-public
   rollback:
-    enable: false
+    enable: true
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
     name: idam-web-public
-    version: 0.2.3
+    version: 0.2.4
   values:
     java:
       image: hmctspublic.azurecr.io/idam/web-public:preview
