feat(rollback): enable rollback

--- a/k8s/preview/idam/idam-api.yaml
+++ b/k8s/preview/idam/idam-api.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   releaseName: idam-api
   rollback:
-    enable: false
+    enable: true
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
     name: idam-api
