Disable Slack notifications for bulk-scan-processor's tests

--- a/k8s/prod/common/bsp/bulk-scan-processor.yaml
+++ b/k8s/prod/common/bsp/bulk-scan-processor.yaml
@@ -53,7 +53,7 @@ spec:
         environment:
           TEST_URL: "http://bulk-scan-processor-prod.service.core-compute-prod.internal"
           SLACK_CHANNEL: "bsp-test-notices"
-          SLACK_NOTIFY_SUCCESS: true
+          SLACK_NOTIFY_SUCCESS: false
           TEST_S2S_NAME: "bulk_scan_processor_tests"
           TEST_S2S_URL: "http://rpe-service-auth-provider-prod.service.core-compute-prod.internal"
       smoketests:
