--- a/k8s/aat/common/bsp/bulk-scan-processor.yaml
+++ b/k8s/aat/common/bsp/bulk-scan-processor.yaml
@@ -48,7 +48,7 @@ spec:
         environment:
           TEST_URL: "http://bulk-scan-processor-aat.service.core-compute-aat.internal"
           SLACK_CHANNEL: "bsp-test-notices"
-          SLACK_NOTIFY_SUCCESS: true
+          SLACK_NOTIFY_SUCCESS: false
           TEST_S2S_NAME: "bulk_scan_processor_tests"
           TEST_S2S_URL: "http://rpe-service-auth-provider-aat.service.core-compute-aat.internal"
           TEST_SCAN_DELAY: "4000"
