Add environment variables for sscs OCR validation URL and transformation URL

--- a/k8s/demo/common/bsp/bsp-demo.yaml
+++ b/k8s/demo/common/bsp/bsp-demo.yaml
@@ -39,9 +39,12 @@ spec:
         image: hmctspublic.azurecr.io/bulk-scan/processor:prod-c7ecda00
         environment:
           STORAGE_BLOB_SELECTED_CONTAINER: "bulkscan"
+          OCR_VALIDATION_URL_SSCS: http://sscs-bulk-scan-demo.service.core-compute-demo.internal
     bulk-scan-orchestrator:
       java:
         image: hmctspublic.azurecr.io/bulk-scan/orchestrator:prod-dfabaef1
+        environment:
+          TRANSFORMATION_URL_SSCS: http://sscs-bulk-scan-demo.service.core-compute-demo.internal
     bulk-scan-payment-processor:
       java:
         image: hmctspublic.azurecr.io/bulk-scan/payment-processor:prod-d767cc21
