--- a/k8s/prod/common/bsp/bulk-scan-orchestrator.yaml
+++ b/k8s/prod/common/bsp/bulk-scan-orchestrator.yaml
@@ -7,6 +7,11 @@ metadata:
   annotations:
     flux.weave.works/automated: "true"
     flux.weave.works/tag.java: glob:prod-*
+    fluxcd.io/automated: "true"
+    repository.fluxcd.io/java: java.image
+    filter.fluxcd.io/java: glob:prod-*
+    repository.fluxcd.io/smoke: java.smoketests.image
+    filter.fluxcd.io/smoke: glob:prod-*
 spec:
   releaseName: bulk-scan-orchestrator
   rollback:
@@ -27,6 +32,16 @@ spec:
         TRANSFORMATION_URL_FINREM: ""
         DELETE_ENVELOPES_DLQ_MESSAGES_CRON: "0 30 0/2 * * *"
         DELETE_ENVELOPES_DLQ_MESSAGES_TTL: "PT72H"
+      testsConfig:
+        memoryLimits: "3072Mi"
+        serviceAccountName: tests-service-account
+        environment:
+          TEST_URL: "http://bulk-scan-orchestrator-prod.service.core-compute-prod.internal"
+          SLACK_CHANNEL: "bsp-test-notices"
+          SLACK_NOTIFY_SUCCESS: true
+      smoketests:
+        enabled: true
+        image: hmctspublic.azurecr.io/bulk-scan/processor-test:prod-94f44dd4
     global:
       environment: prod
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
