revert change in product charge and move the env vars to the correct location

--- a/k8s/demo/cluster-00/bsp/bulk-scan-orchestrator.yaml
+++ b/k8s/demo/cluster-00/bsp/bulk-scan-orchestrator.yaml
@@ -21,6 +21,8 @@ spec:
       replicas: 2
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/bulk-scan/orchestrator:prod-e86235e4
+      environment:
+        TRANSFORMATION_URL_SSCS: http://sscs-bulk-scan-demo.service.core-compute-demo.internal
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
