--- a/k8s/demo/cluster-00/bsp/bulk-scan-processor.yaml
+++ b/k8s/demo/cluster-00/bsp/bulk-scan-processor.yaml
@@ -29,6 +29,7 @@ spec:
         SAS_TOKEN_VALIDITY: "5184000"
         # temporary var to recreate pod and pick up current values from key vault
         DUMMY_VAR: remove-it
+        OCR_VALIDATION_URL_SSCS: http://sscs-bulk-scan-demo.service.core-compute-demo.internal
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
