--- a/k8s/perftest/common/ccd/case-management-web.yaml
+++ b/k8s/perftest/common/ccd/case-management-web.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: ccd
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.nodejs: glob:prod-*
+    flux.weave.works/tag.nodejs: glob:pr-942-*
 spec:
   releaseName: ccd-case-management-web
   rollback:
@@ -20,7 +20,7 @@ spec:
     nodejs:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/ccd/case-management-web:prod-1ba96c70
+      image: hmctspublic.azurecr.io/ccd/case-management-web:pr-942-8394aa07
     global:
       environment: perftest
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
