--- a/k8s/perftest/common/ccd/definition-store-api.yaml
+++ b/k8s/perftest/common/ccd/definition-store-api.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: ccd
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:prod-*
+    flux.weave.works/tag.java: glob:pr-603-*
 spec:
   releaseName: ccd-definition-store-api
   rollback:
@@ -20,7 +20,7 @@ spec:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/ccd/definition-store-api:prod-77f5956b
+      image: hmctspublic.azurecr.io/ccd/definition-store-api:pr-603-fe4e13a6
       environment:
         IDAM_USER_URL: "https://idam-api.perftest.platform.hmcts.net"
     global:
