--- a/k8s/aat/common/xui/manage-organisations.yaml
+++ b/k8s/aat/common/xui/manage-organisations.yaml
@@ -24,6 +24,7 @@ spec:
       ingressHost: manage-org.aat.platform.hmcts.net
       environment:
         FEATURE_TERMS_AND_CONDITIONS_ENABLED: true
+        DUMMY_VAR: true
     global:
       environment: aat
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
