--- a/k8s/prod/common/bsp/bulk-scan-payment-processor.yaml
+++ b/k8s/prod/common/bsp/bulk-scan-payment-processor.yaml
@@ -7,6 +7,11 @@ metadata:
   annotations:
     flux.weave.works/automated: "true"
     flux.weave.works/tag.java: glob:prod-*
+    fluxcd.io/automated: "true"
+    repository.fluxcd.io/java: java.image
+    filter.fluxcd.io/java: glob:prod-*
+    repository.fluxcd.io/smoke: java.smoketests.image
+    filter.fluxcd.io/smoke: glob:prod-*
 spec:
   releaseName: bulk-scan-payment-processor
   rollback:
@@ -23,6 +28,16 @@ spec:
       image: hmctspublic.azurecr.io/bulk-scan/payment-processor:prod-d94753df
       environment:
         IDAM_API_URL: "https://idam-api.platform.hmcts.net"
+      testsConfig:
+        memoryLimits: "3072Mi"
+        serviceAccountName: tests-service-account
+        environment:
+          TEST_URL: "http://bulk-scan-payment-processor-prod.service.core-compute-prod.internal"
+          SLACK_CHANNEL: "bsp-test-notices"
+          SLACK_NOTIFY_SUCCESS: true
+      smoketests:
+        enabled: true
+        image: hmctspublic.azurecr.io/bulk-scan/payment-processor-test:prod-d94753df
     global:
       environment: prod
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
