Reduce jenkins file system writes

--- a/k8s/namespaces/jenkins/jenkins.yaml
+++ b/k8s/namespaces/jenkins/jenkins.yaml
@@ -163,6 +163,10 @@ spec:
                 teamDomain: hmcts-reform
                 tokenCredentialId: slack-token
                 botUser: true
+          pipeline-config: |
+            unclassified:
+              globalDefaultFlowDurabilityLevel:
+                durabilityHint: PERFORMANCE_OPTIMIZED
           sonar: |
             unclassified:
               sonarGlobalConfiguration:
