Add Fee and pay keyword

--- a/k8s/aat/common/divorce/div-fps.yaml
+++ b/k8s/aat/common/divorce/div-fps.yaml
@@ -32,6 +32,8 @@ spec:
       aadIdentityName: divorce
       prometheus:
         enabled: true
+      environment:
+        FEE_KEYWORD: "without-notice"
     global:
       environment: aat
       subscriptionId: "1c4f0704-a29e-403d-b719-b90c34ef14c9"
