--- a/k8s/demo/common/divorce/div-fps.yaml
+++ b/k8s/demo/common/divorce/div-fps.yaml
@@ -32,6 +32,8 @@ spec:
       aadIdentityName: divorce
       prometheus:
         enabled: true
+      environment:
+        FEE_KEYWORD: "without-notice"
     global:
       environment: demo
       subscriptionId: "d025fece-ce99-4df2-b7a9-b649d3ff2060"
