--- a/k8s/prod/common/financial-remedy/finrem-ps.yaml
+++ b/k8s/prod/common/financial-remedy/finrem-ps.yaml
@@ -25,7 +25,7 @@ spec:
         singleRequestTcp: false
       environment:
         IDAM_API_URL: https://idam-api.platform.hmcts.net
-        APPLICATION_WITHOUT_NOTICE_FEE_KEYWORD: "without-notice"
+        FEE_KEYWORD: "without-notice"
     global:
       environment: prod
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
