--- a/k8s/aat/common/reform-scan/blob-router.yaml
+++ b/k8s/aat/common/reform-scan/blob-router.yaml
@@ -58,7 +58,7 @@ spec:
           TEST_STORAGE_CONTAINER_NAME: "bulkscan"
           TEST_STORAGE_ACCOUNT_URL: "https://reformscan.aat.platform.hmcts.net"
           API_GATEWAY_URL: "https://core-api-mgmt-aat.azure-api.net/reform-scan"
-          TEST_USE_PROXY_FOR_SOURCE_STORAGE: "true"
+          TEST_USE_PROXY_FOR_SOURCE_STORAGE: "false"
       smoketests:
         enabled: true
         image: hmctspublic.azurecr.io/reform-scan/blob-router-test:prod-c44be3c7
