--- a/k8s/aat/common/reform-scan/blob-router.yaml
+++ b/k8s/aat/common/reform-scan/blob-router.yaml
@@ -54,7 +54,7 @@ spec:
         environment:
           TEST_URL: "http://reform-scan-blob-router-aat.service.core-compute-aat.internal"
           SLACK_CHANNEL: "bsp-test-notices"
-          SLACK_NOTIFY_SUCCESS: true
+          SLACK_NOTIFY_SUCCESS: false
           TEST_STORAGE_CONTAINER_NAME: "bulkscan"
           TEST_STORAGE_ACCOUNT_URL: "https://reformscan.aat.platform.hmcts.net"
           API_GATEWAY_URL: "https://core-api-mgmt-aat.azure-api.net/reform-scan"
