--- a/k8s/demo/common/ethos/repl-docmosis-service.yaml
+++ b/k8s/demo/common/ethos/repl-docmosis-service.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: ethos
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:prod-*
+    flux.weave.works/tag.java: glob:pr-*
 spec:
   releaseName: repl-docmosis-service
   forceUpgrade: true
@@ -16,12 +16,12 @@ spec:
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
     name: ethos-repl-docmosis-backend
-    version: 0.1.8
+    version: 0.2.0
   values:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/ethos/repl-docmosis-backend:prod-c31ab11f
+      image: hmctspublic.azurecr.io/ethos/repl-docmosis-backend:pr-754-6d2c4d65
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
