specify variable name

--- a/k8s/prod/common/divorce/div-fps.yaml
+++ b/k8s/prod/common/divorce/div-fps.yaml
@@ -31,7 +31,7 @@ spec:
       image: hmctspublic.azurecr.io/div/fps:prod-dcb0e8d5
       environment:
         MANAGEMENT_ENDPOINT_HEALTH_CACHE_TIMETOLIVE: 5000
-        FEE_KEYWORD: "without-notice"
+        GENERAL_APPLICATION_WITHOUT_NOTICE_FEE_KEYWORD: "without-notice"
       aadIdentityName: divorce
       prometheus:
         enabled: true
