enable prod smoke test

--- a/k8s/prod/common/reform-scan/blob-router.yaml
+++ b/k8s/prod/common/reform-scan/blob-router.yaml
@@ -65,7 +65,7 @@ spec:
           TEST_STORAGE_ACCOUNT_URL: "https://reformscan.blob.core.windows.net"
           API_GATEWAY_URL: "https://core-api-mgmt-prod.azure-api.net/reform-scan"
       smoketests:
-        enabled: false
+        enabled: true
         image: hmctspublic.azurecr.io/reform-scan/blob-router-test:prod-228795d0
     global:
       environment: prod
