use appgateway url

--- a/k8s/prod/common/reform-scan/blob-router.yaml
+++ b/k8s/prod/common/reform-scan/blob-router.yaml
@@ -62,7 +62,7 @@ spec:
           SLACK_CHANNEL: "bsp-test-notices"
           SLACK_NOTIFY_SUCCESS: true
           TEST_STORAGE_CONTAINER_NAME: "bulkscan"
-          TEST_STORAGE_ACCOUNT_URL: "https://reformscan.blob.core.windows.net"
+          TEST_STORAGE_ACCOUNT_URL: "https://reformscan.platform.hmcts.net"
           API_GATEWAY_URL: "https://core-api-mgmt-prod.azure-api.net/reform-scan"
       smoketests:
         enabled: true
