Install nodelocaldns + no dns mitigations aat00

--- a/k8s/namespaces/admin/env-injector/patches/aat/cluster-00/env-injector.yaml
+++ b/k8s/namespaces/admin/env-injector/patches/aat/cluster-00/env-injector.yaml
@@ -14,10 +14,5 @@ spec:
     replicas: 2
     environment:
       CLUSTER_NAME: aat-aks-00
-    nodeAffinityTerms:
-      - matchExpressions:
-          - key: agentpool
-            operator: In
-            values:
-              - ubuntu18
-              - ubuntu1804
+    dnsOptions:
+      ndots: 3
