--- a/k8s/sandbox/cluster-01/kube-system/nodelocaldns/nodelocaldns-secondary.yaml
+++ b/k8s/sandbox/cluster-01/kube-system/nodelocaldns/nodelocaldns-secondary.yaml
@@ -14,9 +14,32 @@
 #
 
 apiVersion: v1
+kind: Service
+metadata:
+  name: kube-dns-upstream-secondary
+  namespace: kube-system
+  labels:
+    k8s-app: kube-dns
+    kubernetes.io/name: "KubeDNSUpstreamSecondary"
+spec:
+  ports:
+    - name: dns
+      port: 53
+      protocol: UDP
+      targetPort: 53
+    - name: dns-tcp
+      port: 53
+      protocol: TCP
+      targetPort: 53
+  selector:
+    k8s-app: kube-dns
+
+---
+
+apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: node-local-dns
+  name: node-local-dns-secondary
   namespace: kube-system
 data:
   Corefile: |
@@ -33,8 +56,8 @@ data:
         forward . __PILLAR__CLUSTER__DNS__ {
                 force_tcp
         }
-        prometheus :9253
-        health 169.254.20.10:28080
+        prometheus :9254
+        health 169.254.20.10:28081
         }
     in-addr.arpa:53 {
         log
@@ -46,7 +69,7 @@ data:
         forward . __PILLAR__CLUSTER__DNS__ {
                 force_tcp
         }
-        prometheus :9253
+        prometheus :9254
         }
     ip6.arpa:53 {
         log
@@ -58,7 +81,7 @@ data:
         forward . __PILLAR__CLUSTER__DNS__ {
                 force_tcp
         }
-        prometheus :9253
+        prometheus :9254
         }
     .:53 {
         log
@@ -70,30 +93,30 @@ data:
         forward . __PILLAR__UPSTREAM__SERVERS__ {
                 force_tcp
         }
-        prometheus :9253
+        prometheus :9254
         }
 
 ---
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
-  name: node-local-dns
+  name: node-local-dns-secondary
   namespace: kube-system
   labels:
-    k8s-app: node-local-dns
+    k8s-app: node-local-dns-secondary
 spec:
   updateStrategy:
     rollingUpdate:
       maxUnavailable: 10%
   selector:
     matchLabels:
-      k8s-app: node-local-dns
+      k8s-app: node-local-dns-secondary
   template:
     metadata:
       labels:
-        k8s-app: node-local-dns
+        k8s-app: node-local-dns-secondary
       annotations:
-        prometheus.io/port: "9253"
+        prometheus.io/port: "9254"
         prometheus.io/scrape: "true"
     spec:
       priorityClassName: system-node-critical
@@ -113,25 +136,19 @@ spec:
             - "-conf"
             - "/etc/Corefile"
             - "-upstreamsvc"
-            - "kube-dns-upstream"
+            - "kube-dns-upstream-secondary"
             - -skipteardown
           securityContext:
             privileged: true
           ports:
-            - containerPort: 53
-              name: dns
-              protocol: UDP
-            - containerPort: 53
-              name: dns-tcp
-              protocol: TCP
-            - containerPort: 9253
+            - containerPort: 9254
               name: metrics
               protocol: TCP
           livenessProbe:
             httpGet:
               host: 169.254.20.10
               path: /health
-              port: 28080
+              port: 28081
             initialDelaySeconds: 60
             timeoutSeconds: 5
           volumeMounts:
@@ -153,7 +170,7 @@ spec:
             optional: true
         - name: config-volume
           configMap:
-            name: node-local-dns
+            name: node-local-dns-secondary
             items:
               - key: Corefile
                 path: Corefile.base
