feat(idam-prod): pod antiaffinity

--- a/k8s/prod/common/idam/idam-api.yaml
+++ b/k8s/prod/common/idam/idam-api.yaml
@@ -22,6 +22,7 @@ spec:
       replicas: 4
       ingressHost: idam-api.platform.hmcts.net
       aadIdentityName: idam
+      useInterpodAntiAffinity: true
       environment:
         ENDPOINTS_INFO_ENABLED: true
         CACHING_USERS_MAXTHREADS: 3
