--- a/k8s/prod/common/idam/idam-web-public.yaml
+++ b/k8s/prod/common/idam/idam-web-public.yaml
@@ -21,6 +21,7 @@ spec:
       image: hmctspublic.azurecr.io/idam/web-public:prod-bb506f19
       ingressHost: hmcts-access.service.gov.uk
       aadIdentityName: idam
+      useInterpodAntiAffinity: true
       environment:
         STRATEGIC_SERVICE_URL: https://idam-api.platform.hmcts.net
     global:
