--- a/k8s/prod/common/idam/idam-web-admin.yaml
+++ b/k8s/prod/common/idam/idam-web-admin.yaml
@@ -21,6 +21,7 @@ spec:
       image: hmctspublic.azurecr.io/idam/web-admin:prod-cbf2c21e
       ingressHost: idam-web-admin.platform.hmcts.net
       aadIdentityName: idam
+      useInterpodAntiAffinity: true
       environment:
         STRATEGIC_SERVICE_URL: https://idam-api.platform.hmcts.net
         STRATEGIC_PUBLIC_URL: https://hmcts-access.service.gov.uk
