Perftest trigger release

--- a/k8s/perftest/common/family-public-law/fpl-case-service.yaml
+++ b/k8s/perftest/common/family-public-law/fpl-case-service.yaml
@@ -26,6 +26,7 @@ spec:
       image: hmctspublic.azurecr.io/fpl/case-service:prod-e0c6167b
       ingressHost: fpl-case-service-perftest.service.core-compute-perftest.internal
       environment:
+        DUMMY: "trigger release for AppInsight"
         SCHEDULER_ENABLED: false
         DOCMOSIS_TORNADO_URL: https://docmosis-testing.platform.hmcts.net
         GATEWAY_URL: https://gateway-ccd.perftest.platform.hmcts.net
