--- a/k8s/namespaces/monitoring/prom-operator.yaml
+++ b/k8s/namespaces/monitoring/prom-operator.yaml
@@ -55,7 +55,8 @@ spec:
           path: /metrics
         - name: "nodelocaldns"
           selector:
-            k8s-app: node-local-dns
+            matchLabels:
+              k8s-app: node-local-dns
           namespaceSelector:
             matchNames:
               - kube-system
