Update prometheus ingress

--- a/k8s/namespaces/monitoring/patches/cftptl/cluster-00/prom-operator.yaml
+++ b/k8s/namespaces/monitoring/patches/cftptl/cluster-00/prom-operator.yaml
@@ -9,12 +9,12 @@ spec:
     prometheus:
       ingress:
         hosts:
-          - prometheus-ptl.sandbox.platform.hmcts.net
+          - prometheus-ptl.platform.hmcts.net
 
     alertmanager:
       ingress:
         hosts:
-          - alertmanager-ptl.sandbox.platform.hmcts.net
+          - alertmanager-ptl.platform.hmcts.net
 
     grafana:
       enabled: true
