--- a/k8s/namespaces/monitoring/prom-operator.yaml
+++ b/k8s/namespaces/monitoring/prom-operator.yaml
@@ -56,7 +56,8 @@ spec:
       additionalPodMonitors:
         - name: "nodelocaldns"
           selector:
-            k8s-app: node-local-dns
+            matchLabels:
+              k8s-app: node-local-dns
           namespaceSelector:
             matchNames:
               - kube-system
