--- a/k8s/prod/common/divorce/div-rfe.yaml
+++ b/k8s/prod/common/divorce/div-rfe.yaml
@@ -5,7 +5,7 @@ metadata:
   name: div-rfe
   namespace: divorce
   annotations:
-    flux.weave.works/automated: "true"
+    flux.weave.works/automated: "false"
     flux.weave.works/tag.nodejs: glob:prod-*
 spec:
   releaseName: div-rfe
@@ -15,7 +15,7 @@ spec:
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
     name: div-rfe
-    version: 1.1.3
+    version: 1.1.4
   values:
     nodejs:
       replicas: 2
