Manually override demo images

--- a/k8s/demo/common/sscs/sscs-evidence-share.yaml
+++ b/k8s/demo/common/sscs/sscs-evidence-share.yaml
@@ -20,7 +20,7 @@ spec:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/sscs/evidence-share:pr-491-6fb4ab1e
+      image: hmctspublic.azurecr.io/sscs/evidence-share:prod-b14faf4b
       environment:
         BULK_SCAN_MIGRATED: false
     global:
