dnsdrone prometheus config perftest01

--- a/k8s/namespaces/monitoring/patches/perftest/cluster-01/prom-operator.yaml
+++ b/k8s/namespaces/monitoring/patches/perftest/cluster-01/prom-operator.yaml
@@ -29,7 +29,7 @@ spec:
             matchNames:
               - kube-system
           podMetricsEndpoints:
-            - targetPort: 9696
+            - port: metrics
               path: /metrics
 
     alertmanager:
