SSCS-7187 deploy to demo

--- a/k8s/demo/common/sscs/sscs-tribunals-api.yaml
+++ b/k8s/demo/common/sscs/sscs-tribunals-api.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: sscs
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:prod-*
+    flux.weave.works/tag.java: glob:pr-939-abde21a8
 spec:
   releaseName: sscs-tribunals-api
   rollback:
